# hyperfetch

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: config.rs  lib.rs  main.rs
src/ascii/: logos.rs  mod.rs
src/display/: colors.rs
src/info/: audio.rs  desktop.rs  hardware.rs  misc.rs  mod.rs  network.rs  packages.rs  power.rs  system.rs
